[package]
name = "maat-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "3.0.7"
features = ["derive"]

[dependencies.mio]
version = "0.8.0"
features = ["os-poll", "net"]
